# rubiks-cube

./: README.MD  detect-cube-face.py  kluster.py  pyproject.toml  requirements.txt  viz.py
resources/: color-calibration.json  colors.json
src/: PyCube.py  animate_cube.py  calibrate.py  calibrate_colors.py  detect-cube-face.py  draw.py  geometry.py  helpers.py  main.py  predict.py
